[project]
name = "aiod_utils"
dynamic = ["version"]
description = "Utilities for AI OnDemand"
readme = "README.md"
authors = [
    {name = "Cameron Shand", email = "cameron.shand@crick.ac.uk"},
    {name = "Fiona Young", email = "fiona.young@crick.ac.uk"},
    {name = "Numan Ahmed", email = "numan.ahmed@crick.ac.uk"},
    {name = "Qin Yu", email = "qin.yu@crick.ac.uk"},
    {name = "Jon Smith", email = "jon.smith@crick.ac.uk"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
keywords = ["image analysis", "segmentation"]
dependencies = [
    "bioio>=3.2.0",
    "bioio-imageio>=1.1.0",
    "bioio-ome-zarr>=2",
    "bioio-tifffile>=1.2.0",
    "tifffile",
    "numcodecs",
    "zarr>=3",
    "numpy>=1.26,<2.0",
    "opencv-python",
    "scikit-image>0.20",
    "pyyaml",
    "pandas<2.3.0"
]

[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"

[project.optional-dependencies]
testing = ["pytest"]
bioformats = ["bioio-bioformats"]
