[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aiod_utils"
version = "0.0.1"
description = "Utilities for AI OnDemand"
readme = "README.md"
authors = [
    {name = "Cameron Shand", email = "cameron.shand@crick.ac.uk"},
    {name = "Fiona Young", email = "fiona.young@crick.ac.uk"},
    {name = "Numan Ahmed", email = "numan.ahmed@crick.ac.uk"},
    {name = "Qin Yu", email = "qin.yu@crick.ac.uk"},
    {name = "Jon Smith", email = "jon.smith@crick.ac.uk"}
]
requires-python = ">=3.11,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["image analysis", "segmentation"]
dependencies = [
    "bioio>=3.2.0",
    "bioio-imageio>=1.1.0",
    "bioio-ome-zarr>=2",
    "bioio-tifffile>=1.2.0",
    "tifffile",
    "numcodecs",
    "zarr>=3",
    "numpy>=1.26,<2.0",
    "opencv-python",
    "scikit-image>0.20",
    "pyyaml",
    "pandas<2.3.0"
]

[project.optional-dependencies]
testing = ["pytest"]
bioformats = ["bioio-bioformats"]

[tool.ruff]
line-length = 88
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*vendored*",
    "*_vendor*",
]